Fixed head func, Update docs, Read.me
