# src/docs/swagger.json
@@ -265,16 +265,16 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
-                            "$ref": "#/definitions/model.Workflow"
+                            "type": "string"
                         }
                     },
                     "204": {
                         "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/model.Message"
+                            "type": "string"
                         }
                     }
                 }
